# Groot

./: .gitignore  db.sqlite3  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py
tabom/migrations/: 0001_initial.py  0002_like_unique_user_article.py
tabom/models/: like.py
tabom/services/: article_service.py  like_service.py
tabom/tests/: test_auto_now.py  test_like_service.py
